Progress bar, basic stats shown on character page
