# src/app/api/backend/model/characterRequest.ts
@@ -13,5 +13,30 @@
 
 export interface CharacterRequest { 
     name?: string | null;
+    experience?: number;
+    acrobatics?: boolean;
+    animalHandling?: boolean;
+    arcana?: boolean;
+    athletics?: boolean;
+    deception?: boolean;
+    history?: boolean;
+    insight?: boolean;
+    intimidation?: boolean;
+    investigation?: boolean;
+    medicine?: boolean;
+    nature?: boolean;
+    perception?: boolean;
+    performance?: boolean;
+    religion?: boolean;
+    sleightOfHand?: boolean;
+    stealth?: boolean;
+    survival?: boolean;
+    personalityTraits?: string | null;
+    ideals?: string | null;
+    bonds?: string | null;
+    flaws?: string | null;
+    backstory?: string | null;
+    alliesAndOrganisations?: string | null;
+    appearance?: string | null;
 }
 
