# src/app/character-sheet/models/character-sheet-level-model.ts
@@ -1,0 +1,7 @@
+export interface CharacterSheetLevelModel {
+  level: number;
+  previousLevelExperienceRequirement: number | null;
+  currentLevelExperienceRequirement: number | null;
+  nextLevelExperienceRequirement: number | null;
+  experience: number;
+}
